# pi-desktop

./: .gitignore  AGENTS.md  build-ico.mjs  package-lock.json  package.json  tsconfig.json
scripts/: setup-resources.mjs
src/: App.tsx  DiffViewer.tsx  Markdown.tsx  entry.tsx  icons.tsx  index.html  opencode-components.css  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  DEBUG.md  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx  LoadingIndicator.tsx  SessionSidebar.tsx  TerminalOutput.tsx
